--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,8 +9,8 @@
         <input  id="password-signup" type="password" class="form-input" />
 
         <button type="submit" class="btn">Signup!</button>
-        <a class="login-link" href="../public/js/signup.js">Log in instead</a>
+        <a class="login-link" href="/login">Log in instead</a>
       </form>
     </div>
 
-<script src="../public/js/signup.js"></script>
+<script src="/js/signup.js"></script>
