--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -1,15 +1,18 @@
+{{#if loggedIn}}
 <div class="card">
     <h3 class="card-header">Create New Post</h3>
     <form class="card-body new-post-form" id="new-post-form">
         <label for="post-title" class="form-label">Title</label>
-        <input type="text" id="post-title" name="post-title" class="form-input" />
+        <input type="text" name="post-title" id="post-title" required />
 
-
-        <label class="form-label" for="content">Content</label>
-        <input id="content" name="content" class="form-input" />
+        <label class="form-label" for="post-body">Content</label>
+        <textarea name="post-body" id="post-body" required></textarea>
 
         <button type="submit" class="btn">Create</button>
     </form>
 </div>
 
-<script src="../public/js/new.js"></script>
+<script src="/js/new.js"></script>
+{{else}}
+<p>Please log in to create a new post.</p>
+{{/if}}
